completed swagger - 17/11/21
